--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "E-co.lab Dev Team",
   "license": "MIT",
   "dependencies": {
+    "@chainlink/contracts": "^0.8.0",
     "@openzeppelin/contracts": "^5.4.0"
   },
   "type": "module",
