--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@chainlink/contracts": "^0.8.0",
+    "@chainlink/env-enc": "^1.0.5",
+    "@chainlink/functions-toolkit": "^0.3.2",
     "@openzeppelin/contracts": "^5.4.0"
   },
   "type": "module",
